--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -41,11 +41,11 @@ We will attempt to answer the questions: what are the pros and cons of different
 
 ![test image size](/img/projects/project1.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
-*Fig.1. different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
+*Fig.1. Different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
 
 **A list of 1-5 key papers/materials summarising the subject**: 
 1. [http://www.scholarpedia.org/article/Brain_connectivity](http://www.scholarpedia.org/article/Brain_connectivity)
-2. [http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full](http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full)
+2. [Bastos, A. M., & Schoffelen, J. M. (2015). A tutorial review of functional connectivity analysis methods and their interpretational pitfalls. Frontiers in systems neuroscience, 9.](http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full)
 3. A. K. Enge, C. Gerloff,C. C. Hilgetag and G. Nolte (2013). Intrinsic Coupling Modes: Multiscale Interactions in Ongoing Brain Activity. Neuron 80 (4): 867–86 
 4. M. Bola and V. Borchardt (2016). Cognitive Processing Involves Dynamic Reorganization of the Whole-Brain Network's Functional Community Structure. Journal of Neuroscience 36 (13): 3633–5 
 
@@ -100,7 +100,7 @@ In this case, only the basic knowledge of trypophobia is required. An additional
 2. [https://www.reddit.com/r/trypophobia/](https://www.reddit.com/r/trypophobia/) (warning: triggers)
 
 Additionally, take a look at [http://p.migdal.pl/2017/04/30/teaching-deep-learning.html](http://p.migdal.pl/2017/04/30/teaching-deep-learning.html).
-If you are new to Python, this [book](http://www.southampton.ac.uk/~fangohr/teaching/python/book.html)  may be relevant.
+If you are new to Python, this [book](http://www.southampton.ac.uk/~fangohr/teaching/python/book.html "Python for Computational Science and Engineering")  may be relevant.
 
 
 **A list of requirements for taking part in the project**: 
@@ -229,7 +229,7 @@ We believe that in case of success this project can provide information about th
 #### Authors: Anastasia Osoianu / Charl Linssen <a href="mailto:charl@turingbirds.com"><i class="fa fa-envelope"></i></a> / Katja Heuer / Roberto Toro
 
 **Abstract:**
-Polarized light imaging (PLI) as well as the tractography of high angular resolution diffusion weighted imaging (DWI) data reveal a gross white matter (WM) geometry of striking regularity[[1]](http://journal.frontiersin.org/researchtopic/168/wiring-principles-of-cerebral-cortex#articles),[[3]](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json). This makes the neuroanatomist wonder whether it would be possible to generate a connectome based exclusively on a small set of hypotheses:
+Polarized light imaging (PLI) as well as the tractography of high angular resolution diffusion weighted imaging (DWI) data reveal a gross white matter (WM) geometry of striking regularity[[1]](http://journal.frontiersin.org/researchtopic/168/wiring-principles-of-cerebral-cortex#articles "Frontier Research Topic "Wiring Principles of Cerebral Cortex""),[[3]](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json "Vervet monkey brain slice scanned using Polarized Light Imaging"). This makes the neuroanatomist wonder whether it would be possible to generate a connectome based exclusively on a small set of hypotheses:
 
 * more than 90% of white matter connections are cortico­cortical
 -  the density of fibres is homogeneous throughout the white matter
@@ -238,7 +238,7 @@ Polarized light imaging (PLI) as well as the tractography of high angular resolu
 
 How much of a real brain connectome would be recovered by such a simple and reductionistic model?
  
-We propose to approach this question in the simple case of a 2D coronal slice. We use methods inspired by swarm intelligence [[2]]([http://www.red3d.com/cwr/boids/), and simulate a dynamical system where particles are instantiated at the gray matter/white matter boundary. The particles are allowed to propagate within the white matter mask, following simple rules that reflect the above list of hypotheses. After reaching a steady state, the white matter orientation distribution is reconstructed on a voxel-by-voxel basis, for each individual voxel based on the statistics of the particle paths crossing it. This is roughly the opposite of streamline tractography, where paths are sampled based on a distribution map. By implementing derived measures such as an anisotropy index, the resulting map can be quantitatively compared to empirical data. We are especially interested in multimodal effects that occur e.g. when two fibre bundles cross. We will validate our model on coronal slices of the vervet monkey, as an excellent empirical dataset is available [[3]](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json). Proof­ of­ concept code is available via GitHub[[4]](https://github.com/aniv0s/FakeTensorImaging).
+We propose to approach this question in the simple case of a 2D coronal slice. We use methods inspired by swarm intelligence [[2]]([http://www.red3d.com/cwr/boids/ "Craig Reynolds' "Boids""), and simulate a dynamical system where particles are instantiated at the gray matter/white matter boundary. The particles are allowed to propagate within the white matter mask, following simple rules that reflect the above list of hypotheses. After reaching a steady state, the white matter orientation distribution is reconstructed on a voxel-by-voxel basis, for each individual voxel based on the statistics of the particle paths crossing it. This is roughly the opposite of streamline tractography, where paths are sampled based on a distribution map. By implementing derived measures such as an anisotropy index, the resulting map can be quantitatively compared to empirical data. We are especially interested in multimodal effects that occur e.g. when two fibre bundles cross. We will validate our model on coronal slices of the vervet monkey, as an excellent empirical dataset is available [[3]](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json "Vervet monkey brain slice scanned using Polarized Light Imaging"). Proof­ of­ concept code is available via GitHub[[4]](https://github.com/aniv0s/FakeTensorImaging).
 
 ![image-title-here](/img/projects/project5.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
