poprawki od Natalii

--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -23,7 +23,7 @@ color: white
 
 ## Project 1: Functional connectivity research: can we find a common ground? 
 
-#### Authors: Natalia Bielczyk, Msc<sup>1</sup> <a href="mailto:natalia.bielczyk@gmail.com"><i class="fa fa-envelope"></i></a>  / Michał Bola, Phd <sup>2</sup>
+#### Natalia Bielczyk, Msc<sup>1</sup> <a href="mailto:natalia.bielczyk@gmail.com"><i class="fa fa-envelope"></i></a>  / Michał Bola, Phd <sup>2</sup>
 
 
 
@@ -31,7 +31,6 @@ color: white
 1. Radboud University Nijmegen Medical Centre, Nijmegen, the Netharlands
 2. Nencki Institute of Experimental Biology, Warsaw, Poland 
 
-**Abstract:** 
 Functional connectivity (FC) research has become one of the leading concepts used for characterising network dynamics across multiple disciplines, from neuroimaging, through gene expression networks, to social networks. It is also a basis for graph theoretical biomarkers of psychiatric disorders and as such, it become an important subfield of cognitive neuroimaging.
 
 FC is usually operationalised by means of Pearson’s and partial correlation, however the implementation of FC can vary between different fields, and different applications. Then, there is a question: does an optimal method to quantify functional connectivity exist? Or is the choice dependent on the data properties? How to choose the right method? In this project, we will use open-access data from functional Magnetic Resonance Imaging, EEG, gene expression data, stock exchange data and a few other open-access datasets, and we will compare the leading methods for computing FC when applied to these datasets.
@@ -76,12 +75,12 @@ We will attempt to answer the questions: what are the pros and cons of different
 
 ## Project 2: Detecting trypophobia triggers 
 
-#### Author: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a> 
+#### Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a> 
 
-1. deepsense.io
+1. [deepsense.io](deepsense.io)
 
 
-**Abstract**:Trypophobia is a phobia of irregular patterns or clusters of small holes or bumps. It may arise from the sense of aversion towards skin infection with maggots or fungi. In general, this phenomenon is adaptive, because a strong sense of disgust may protect against touching infected humans, animals or corpses. Yet, it can also become maladaptive if some, otherwise benign, patterns cause a strong aversive response. During this workshop we will create an artificial convolutional neural network that predicts if an image is likely to cause a trypophobic response. Such networks are a state of the art technique for visual pattern detection.
+Trypophobia is a phobia of irregular patterns or clusters of small holes or bumps. It may arise from the sense of aversion towards skin infection with maggots or fungi. In general, this phenomenon is adaptive, because a strong sense of disgust may protect against touching infected humans, animals or corpses. Yet, it can also become maladaptive if some, otherwise benign, patterns cause a strong aversive response. During this workshop we will create an artificial convolutional neural network that predicts if an image is likely to cause a trypophobic response. Such networks are a state of the art technique for visual pattern detection.
 
 The goal of the project is twofold:
 
@@ -123,9 +122,9 @@ If you are new to Python, this [book](http://www.southampton.ac.uk/~fangohr/teac
 
 ## Project 3: Development of video game for studying joint action dynamics 
 
-#### Authors: Julian Zubek, PhD <a href="mailto:zubekj@gmail.com"><i class="fa fa-envelope"></i></a> / Arkadiusz Białek, PhD
+#### Julian Zubek, PhD<sup>1</sup> <a href="mailto:zubekj@gmail.com"><i class="fa fa-envelope"></i></a> / Arkadiusz Białek, PhD<sup>1</sup> 
+1. Institute of Psychology, Jagiellonian University, Kraków
 
-**Abstract:**
 The goal of the project is to create a playable video game for two players, which will be applied in a psychological experiment to measure capabilities for “joint action”—non accidental, coordinated behaviour of two or more individuals aimed at achieving their common goal.
 
 A great many processes of different levels of complexity can be described in terms of joint action, from simple tasks such as carrying a heavy object together to playing a piano duet or engaging in linguistic exchange (Sebanz et al. 2006). Joint action tasks may be characterized by role distribution: there may be parallel roles (highly similar) or complementary roles (different, but interdependent) (Warneken et al. 2006). It is suggested that joint action processes are crucial to our development and survival as social species (Tomasello 2014). Identifying and understanding qualities of behavioural coordination and cognitive mechanisms governing joint action is an ongoing research endeavour. One promising approach is to construct an experimental task in the form of video game (Satta et al. 2017). This allows defining cooperation goals in the context of an artificial environment in which all aspects of environmental dynamics can be controlled. We can register specific actions performed by the players—such as cursor movements—and analyse them as interrelated time series in terms of synchronicity, recurrence, leader-follower relations etc. Such dynamical measures, when compared with other behavioural and psychological characteristics of the participants, may provide us deeper insights as to the factors determining quality of joint action.
@@ -164,7 +163,7 @@ General agenda:
    * Communicative English
    * Some experience in Python programming and/or computer graphics and/or game design
 
-**A maximal number of participants:**6
+**A maximal number of participants:** 6
 
 **Skills and competences to be acquired during the project:**
    * Experimental design
@@ -182,10 +181,11 @@ The developed game will be released as open source software. It will be used as 
 
 ## Project 4: Training a human-like movie evaluation system based on the semantic features of the storylines
 
-#### Authors: Julia Immiora <a href="mailto:ju.berezutskaya@gmail.com"><i class="fa fa-envelope"></i></a>  / Marcel van Gerven
+#### Julia Berezutskaya<sup>1,2</sup> <a href="mailto:ju.berezutskaya@gmail.com"><i class="fa fa-envelope"></i></a>  / Marcel van Gerven, PhD<sup>2</sup>
 
+1. Brain Center Rudolf Magnus, University Medical Center Utrecht, The Netherlands
+2. Donders Institute for Brain, Cognition and Behaviour, Nijmegen, The Netherlands
 
-**Abstract:**
 One of the interesting questions in behavioral neuroscience is how humans evaluate perceived complex information. For example, we would like to understand what makes a movie to be rated high or low on average. Specifically, it is interesting to see whether the information about the movie, such as the movie description, its cast, genre and other attributes, is predictive of the average rating the movie receives.
 
 In our project, we want to develop a model that predicts IMDb ratings of the movies based on their descriptions. To our knowledge, the existing algorithms attempt to predict IMDb ratings based on meta-information about the movies: directors, actors, genre, year, movie length and so on (Hsu et al., 2014; San, 2016). We believe that one of the key indicators of the movie reception is the movie storyline along with its character descriptions. In the present project, we aim at building a model that predicts IMDb ratings using movie storyline information.
@@ -198,9 +198,9 @@ In both cases, we can make use of pretrained word embeddings to represent text i
 
 We believe that in case of success this project can provide information about the trends in human behavior when it comes to evaluation of the movie input. It will be interesting to see whether we will be able to uncover the semantic features that influence the movie reception by public. 
 
-![image-title-here](/img/projects/imdb.png?style=centerme){:class="img-responsive" height="100%" width="100%" align="center"}
+![image-title-here](/img/projects/project4.jpg?style=centerme){:class="img-responsive" height="100%" width="100%" align="center"}
 
-*Fig.4. The Internet Movie Database front page.*
+*Fig.4. ​Training​ ​a​ ​discriminative​ ​neural​ ​network​ ​to​ ​predict​ ​IMDb​ ​ratings.​ A.​ ​Schematic​ ​view​ ​of​ ​the​ ​artificial​ ​neural network​ ​(image​ ​from​ ​[Christopher​ ​Olah,​ ​blog​ ​post](https://colah.github.io/posts/2015-01-Visualizing-Representations/)​).​ ​B.​ ​Word​ ​embeddings​ ​used​ ​as​ ​an​ ​input​ ​to​ ​the​ ​model​ ​(image from​ ​[Magnus​ ​Sahlgren,​ ​linkedin​ ​post](https://www.linkedin.com/pulse/brief-history-word-embeddings-some-clarifications-magnus-sahlgren)​)*
 
 
 **A list of 1-5 key papers/materials summarising the subject:**
@@ -213,7 +213,7 @@ We believe that in case of success this project can provide information about th
   * BSc program, or higher
    * English: good, not necessarily proficient
    * good Python programming skills and basic familiarity with machine learning and deep learning
-   * familiarity with Tensorflow, PyTorch or ChainerA maximal number of participants:
+   * familiarity with Tensorflow, PyTorch or Chainer
 
 **A maximal number of participants:** 5
 
@@ -226,9 +226,12 @@ We believe that in case of success this project can provide information about th
 
 ## Project 5: Hypothesis­-driven white matter tractography from T1­-weighted MRI images
 
-#### Authors: Anastasia Osoianu / Charl Linssen <a href="mailto:charl@turingbirds.com"><i class="fa fa-envelope"></i></a> / Katja Heuer / Roberto Toro
+#### Anastasia Osoianu<sup>1</sup> / Charl Linssen<sup>1</sup> <a href="mailto:charl@turingbirds.com"><i class="fa fa-envelope"></i></a> / Katja Heuer<sup>2</sup> / Roberto Toro<sup>3</sup>
 
-**Abstract:**
+1. Donders Institute for Brain, Cognition and Behaviour, Nijmegen, The Netherlands
+2. Max Planck Institute for Human Cognitive and Brain Sciences, Leipzig, Germany 
+3. Institut Pasteur, Paris, France
+
 Polarized light imaging (PLI) as well as the tractography of high angular resolution diffusion weighted imaging (DWI) data reveal a gross white matter (WM) geometry of striking regularity[[1]](http://journal.frontiersin.org/researchtopic/168/wiring-principles-of-cerebral-cortex#articles "Frontier Research Topic "Wiring Principles of Cerebral Cortex""),[[3]](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json](http://microdraw.pasteur.fr/microdraw.html?source=/vervet/vervet.json "Vervet monkey brain slice scanned using Polarized Light Imaging"). This makes the neuroanatomist wonder whether it would be possible to generate a connectome based exclusively on a small set of hypotheses:
 
 * more than 90% of white matter connections are cortico­cortical
@@ -274,10 +277,11 @@ Next to collective brainstorming, you can focus on any of two main themes in the
 
 ## Project 6: One channel EEG sleep staging with open source and open hardware NeuroOn sleep mask
 
-#### Authors: Paweł Kazimieczak / Franciszek Rakowski <a href="mailto:james.cole@imperial.ac.uk"><i class="fa fa-envelope"></i></a> 
+####  Franciszek Rakowski PhD<sup>1</sup> <a href="mailto:rakowski@icm.edu.pl"><i class="fa fa-envelope"></i></a> / Paweł Kazimieczak<sup>2</sup>
+1. ICM, University of Warsaw 
+2. [Interclinic Co.](www.inteliclinic.com)
 
 
-**Abstract:**
 This project means data science and your brain in daily practice!
 Participants will have an opportunity to carry out EEG signal registration with the NeuroOn-Open mask. The NeuroOn-Open mask is a simple and portable device equipped with 2 EEG electrodes, pulse-oximeter and blood oxygen saturation measurement device.
 
@@ -327,11 +331,11 @@ However, the results, or methods proposed at the Brainhack project might be impl
 
 ## Project 7: Building a brain-ageing biomarker using machine learning
 
-#### Authors: James H Cole, PhD<sup>1</sup> <a href="mailto:james.cole@imperial.ac.uk"><i class="fa fa-envelope"></i></a> / Sebastian Popescu, MSc <sup>1</sup>
+#### James H Cole, PhD<sup>1</sup> <a href="mailto:james.cole@imperial.ac.uk"><i class="fa fa-envelope"></i></a> / Sebastian Popescu, MSc <sup>1</sup>
 1.  Computational, Cognitive & Clinical Neuroimaging Laboratory (C3NL), Imperial College London
 
 
-**Abstract:** As humans age, changes to the structure and function of the brain occur, so-called ‘brain ageing’. Brain ageing is associated with cognitive decline, decreased function capacity and a higher risk of neurodegenerative disease and dementia. A biomarker of the brain ageing process could have great utility in identifying people at risk of experiencing the adverse effects of brain ageing, before any symptoms manifest. Brain ageing biomarkers could also be useful for mapping individualised brain-ageing trajectories, assessing potential influences on brain ageing and in aiding the design of clinical trials.
+As humans age, changes to the structure and function of the brain occur, so-called ‘brain ageing’. Brain ageing is associated with cognitive decline, decreased function capacity and a higher risk of neurodegenerative disease and dementia. A biomarker of the brain ageing process could have great utility in identifying people at risk of experiencing the adverse effects of brain ageing, before any symptoms manifest. Brain ageing biomarkers could also be useful for mapping individualised brain-ageing trajectories, assessing potential influences on brain ageing and in aiding the design of clinical trials.
 
 Our work has used T1-MRI to design such a biomarker (brain-predicted age), taking voxelwise brain volume images and using a machine-learning regression to accurately predict chronological age in N=2001 healthy people aged 18-90. This follows the experimental design from biogerontology research that looks for measures of underlying ‘biological age’, and assesses the appropriateness of a measure based on the accuracy of age prediction. Our leading model has used voxelwise grey matter in a 3D convolutional neural network (CNN) approach, resulting in a mean absolute error (MAE) of 4.16 years, Pearson’s r = 0.96, R2 = 0.92. There is still considerable room for improvement in the model, to reduce the MAE towards minimal values. This is necessary if brain-predicted age is ever to have clinical impact, as currently the error levels mean that individualised predictions may be misleading.
 
@@ -372,9 +376,11 @@ If a single prediction algorithm that generates a mean absolute error (MAE) less
 
 ## Project 8: Building and using the “FlyPi”: the 3D-printed Neurobiology Lab 
 
-#### Authors: Andre Maia Chagas / Eric James McDermott / Valerio Raco
+#### Andre Maia Chagas<sup>1</sup> / Eric James McDermott<sup>2</sup> / Valerio Raco<sup>3</sup>
 
-**Abstract:**
+1. Centre for Integrative Neurosciences University of Tuebingen, Tuebingen, Germany
+2. International Max Planck Research School, Hertie Institute, University of Tuebingen, Tuebingen, Germany
+3. Universitätsklinikum Tuebingen, Tuebingen, Germany
 
 Small, genetically tractable species such as larval zebrafish, Drosophila, or Caenorhabditis elegans have become key model organisms in modern neuroscience. In addition to their low maintenance costs and easy sharing of strains across labs, one key appeal is the possibility to monitor single or groups of animals in a behavioural arena while controlling the activity of select neurons using optogenetic or thermogenetic tools. However, the purchase of a commercial solution for these types of experiments, including an appropriate camera system as well as a controlled behavioural arena, can be costly. Here, we present a low-cost and modular open-source alternative called the ‘FlyPi’.
 
@@ -385,9 +391,9 @@ Small, genetically tractable species such as larval zebrafish, Drosophila, or Ca
 *Fig.8. Classroom teaching (A) and equipment improvisation. Optogenetic activation of Chrimson in Adult fruit fly (G).*
 
 **A list of 1-5 key papers / online materials summarising the subject:**
-1. [http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002086](http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002086)
-2. [http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.2002702](http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002086)
-3. [https://hackaday.io/project/5059](https://hackaday.io/project/5059)
+1. [Baden, T., Chagas, A. M., Gage, G., Marzullo, T., Prieto-Godino, L. L., & Euler, T. (2015). Open Labware: 3-D printing your own lab equipment. PLoS biology, 13(3), e1002086.](http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002086)
+2. [Chagas, A. M., Prieto-Godino, L. L., Arrenberg, A. B., & Baden, T. (2017). The€ 100 lab: A 3D-printable open-source platform for fluorescence microscopy, optogenetics, and accurate temperature control during behaviour of zebrafish, Drosophila, and Caenorhabditis elegans. PLoS biology, 15(7), e2002702.](http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002086)
+3. [Flypi - cheap microscope/experimental setup on hackday.io](https://hackaday.io/project/5059)
 
 **A List of requirements for taking part in the project:**
  * Basic programming skills are advantageous but not mandatory
