poprawki od Natalii

--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -226,7 +226,7 @@ We believe that in case of success this project can provide information about th
 
 ## Project 5: Hypothesis­-driven white matter tractography from T1­-weighted MRI images
 
-#### Anastasia Osoianu<sup>1</sup> / Charl Linssen<sup>1</sup> <a href="mailto:charl@turingbirds.com"><i class="fa fa-envelope"></i></a> / Katja Heuer<sup>2</sup> / Roberto Toro<sup>3</sup>
+#### Anastasia Osoianu<sup>1</sup> / Charl Linssen<sup>1</sup> <a href="mailto:charl@turingbirds.com"><i class="fa fa-envelope"></i></a> / Katja Heuer<sup>2</sup> / Roberto Toro, PhD<sup>3</sup>
 
 1. Donders Institute for Brain, Cognition and Behaviour, Nijmegen, The Netherlands
 2. Max Planck Institute for Human Cognitive and Brain Sciences, Leipzig, Germany 
