poprawki od Natalii

--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -279,7 +279,7 @@ Next to collective brainstorming, you can focus on any of two main themes in the
 
 ####  Franciszek Rakowski PhD<sup>1</sup> <a href="mailto:rakowski@icm.edu.pl"><i class="fa fa-envelope"></i></a> / Paweł Kazimieczak<sup>2</sup>
 1. ICM, University of Warsaw 
-2. [Interclinic Co.](www.inteliclinic.com)
+2. [Interclinic Co.](https://inteliclinic.com/)
 
 
 This project means data science and your brain in daily practice!
