--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -132,7 +132,7 @@ A great many processes of different levels of complexity can be described in ter
 Our game will be developed from scratch during the 2-day Brianhack, using ideas from participants. We will work on all aspects of game design: the concept, the graphics, programming, etc (while taking into account time constraints). 
 
 ![image-title-here](/img/projects/project3.png){:class="img-responsive" height="100%"}
-*Fig.3A. Screenshot from joint action game used in experiments by Satta et al 2007. Fig.3B. Parallel (a) and comlimentary (b) roles in joint action (Sebanz et al. 2006)*
+*Fig.3A. Screenshot from joint action game used in experiments by Satta et al 2007. Fig.3B. Parallel (a) and complementary (b) roles in joint action (Sebanz et al. 2006)*
 
 **The general requirements for the game are as follows:**
 
