--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -6,8 +6,18 @@ color: white
 
 #  Registration
 
-Registration for project participants will start in September and it will last until 1st November 2017 .
+Registration for project participants is now open.
 
-During registration, there will be small  registration fee for the project participants (to cover the catering during the event, not more than 25€)
+**Early Bird registration (25Eur):**
+* Opening: Monday 18th September 2017
+* Closing: Friday 6th October 2017
+
+**Late Bird registration (30Eur):**
+* Late October/Early November 2017
+
+
+<div class="icontain">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetM4Z8ub4WkOYGHavHmsJGG-WCp4qoWIGzCnPBagoJ51Gs8A/viewform?embedded=true" allowfullscreen style="height:100%; border:none;" ></iframe>
+</div>
 
 
