--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -11,21 +11,21 @@ On the weekend of **17-19th November 2017**, the first edition of **AoN Brainhac
 
 The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining and brain research, but also promote open science in the spirit of the whole Brainhack community [(Craddock et al., 2016)](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees  of various backgrounds are welcome to join!
 
-By submitting your own, genuine research project, you can gain a priceless leadership experience as you will manage a group of researchers at our two-day event.
 
 Please note AoN Brainhack Warsaw 2017 is a satellite event for the interdisciplinary  [Aspects of Neuroscience conference](http://neuroaspects.org/)  which will take place on 24-26th November 2017 in Warsaw. 
 Participation in the conference is not mandatory to take part in Brainhack but we encourage to also consider this.
 
 
+Registration for project participants is now open.
 
+**Early Bird registration:**
+* Opening: Monday 18th September 2017
+* Closing: Friday 6th October 2017
 
-**Deadline for project proposals**:                     01.09.2017
+**Late Bird registration:**
+* Late October/Early November 2017
 
-**Announcement of projects**:                           15.09.2017
-
-**Deadline for participant registration**:               01.11.2017
-
-Please send the project proposals and all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
+Please all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 
 Also, please team up with us! Join our channel (#brainhack-warsaw-2017) on [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) for updated information on the developing Hackathon content and to contribute your own ideas.
