--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -8,6 +8,8 @@ color: white
 
 Registration for project participants is now open.
 
+We welcome everyone at the AoN Brainhack Warsaw 2017 event. We would like to prepare the equipment and the clusters properly before the event, therefore we are asking the participants to register in advance and choose the projects of their preference. We will do our best to make sure that everyone can take part in the project they like, and that the projects are well prepared for the participants. In any case, we welcome everyone to come, watch the event and help us at the first Brainhack in the history of AoN conference!
+
 **Early Bird registration (25Eur):**
 * Opening: Monday 18th September 2017
 * Closing: Friday 6th October 2017
