--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -25,7 +25,7 @@ Registration for project participants is now open.
 **Late Bird registration:**
 * Late October/Early November 2017
 
-Please all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
+Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 
 Also, please team up with us! Join our channel (#brainhack-warsaw-2017) on [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) for updated information on the developing Hackathon content and to contribute your own ideas.
