--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -1,5 +1,5 @@
 ---
-title: Registration
+title: "Registration"
 bg: amethyst
 color: white
 ---
@@ -12,7 +12,7 @@ We welcome everyone at the AoN Brainhack Warsaw 2017 event. We would like to pre
 
 **Early Bird registration (25Eur):**
 * Opening: Monday 18th September 2017
-* Closing: Friday 6th October 2017
+* Closing: Friday ~~6th~~ 15th October 2017 (extended deadline!)
 
 **Late Bird registration (30Eur):**
 * Late October/Early November 2017
