--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -20,7 +20,8 @@ Registration for project participants is now open.
 
 **Early Bird registration:**
 * Opening: Monday 18th September 2017
-* Closing: Friday 6th October 2017
+* Closing: Friday 15th October 2017
+* Notification of acceptance : After 22th October 2017
 
 **Late Bird registration:**
 * Late October/Early November 2017
