--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -14,6 +14,7 @@ color: white
 6. [One channel EEG sleep staging with open source and open hardware NeuroOn sleep mask](#neuroon)
 7. [Building a brain-ageing biomarker using machine learning](#ageingbiomarker)
 8. [Building and using the “FlyPi”: the 3D-printed Neurobiology Lab](#flypi "FlyPi, an open source, affordable, portable biology lab! Want to do behavioural tracking, optogenetics, diagnosis anywhere and on the cheap? Come join our workshop, we will build, learn how to use and develop interesting experiments for research and education." ) 
+9. [Unfolding the Subcortex](#subcortex)
 
 <a id="connectivity"></a>
 
@@ -73,7 +74,7 @@ We will attempt to answer the questions: what are the pros and cons of different
 
 ---
 
-## Project 2: Detecting trypophobia triggers 
+## Project 2: Detecting trypophobia triggers [fully booked]
 
 #### Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a> 
 
@@ -179,7 +180,7 @@ The developed game will be released as open source software. It will be used as 
 
 ---
 
-## Project 4: Training a human-like movie evaluation system based on the semantic features of the storylines
+## Project 4: Training a human-like movie evaluation system based on the semantic features of the storylines [fully booked]
 
 #### Julia Berezutskaya<sup>1,2</sup> <a href="mailto:ju.berezutskaya@gmail.com"><i class="fa fa-envelope"></i></a>  / Marcel van Gerven, PhD<sup>2</sup>
 
@@ -329,7 +330,7 @@ However, the results, or methods proposed at the Brainhack project might be impl
 
 ---
 
-## Project 7: Building a brain-ageing biomarker using machine learning
+## Project 7: Building a brain-ageing biomarker using machine learning [fully booked]
 
 #### James H Cole, PhD<sup>1</sup> <a href="mailto:james.cole@imperial.ac.uk"><i class="fa fa-envelope"></i></a> / Sebastian Popescu, MSc <sup>1</sup>
 1.  Computational, Cognitive & Clinical Neuroimaging Laboratory (C3NL), Imperial College London
@@ -412,3 +413,57 @@ In this project we want to teach participants how to build a DIY and affordable 
 
 **Is there a plan for extending this work to a peer-reviewed paper in case the results are promising?**
 The project can be extended to a peer-reviewed paper when participants and project leaders think about educational literature.
+
+<a id="subcortex"></a> 
+
+---
+
+
+## Project 9: Unfolding the Subcortex 
+
+#### Vinod Kumar, PhD<sup>1</sup> 
+1. Max Planck Institute for Biological Cybernetics, Tuebingen, Germany 
+
+We all know how fascinating our brain is. It is even more fascinating once we try to understand how it works. Over the past few decades, neuroanatomists have been rigorously busy with charting this beautiful structure, ad trying to understand its complexity. With the advent of computers and graphics, the ability to illustrate the structure and function of the brain has achieved new heights. 
+
+
+![image-title-here](/img/projects/project9/image1.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
+
+For example, Van Essen and colleagues have achieved a fine level of cortical (Fig. 1) and cerebellar illustration (Fig. 2). Remarkably, they have demonstrated the unfolding of the complex cortical and cerebellar sheet into 2D (Fig. 1-2). This gives an incredible overview of our brain in just one shot. It also contributes to research as unfolding 3D pictures into 2D makes it easier to compare between brain activity across individuals.
+
+![image-title-here](/img/projects/project9/image2.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
+
+
+However, there is still a room for improvement in this field, as to date, the subcortical structures have not been a subject to the unfolding procedures (Fig.3).
+
+![image-title-here](/img/projects/project9/image3.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
+
+Therefore, in this project, we will work on the 2D unfolding of the subcortical structures in the brain. The goal of the project is to facilitate comprehension of the subcortical brain in one single view.
+
+![image-title-here](/img/projects/project9/image4.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
+
+
+
+**A list of 1-5 key papers / online materials summarising the subject:**
+1. [Essen, D. C. (2002). Surface‐Based Atlases of Cerebellar Cortex in the Human, Macaque, and Mouse. Annals of the New York Academy of Sciences, 978(1), 468-479.](http://brainvis.wustl.edu/resources/VE_ANYAS02.pdf )
+2. [http://brainvis.wustl.edu/wiki/index.php/Caret:Operations/Morphing](http://brainvis.wustl.edu/wiki/index.php/Caret:Operations/Morphing)
+3. [http://brainvis.wustl.edu/CaretHelpAccount/caret5_help/tutorials/Caret_Analysis_5.5.html](http://brainvis.wustl.edu/CaretHelpAccount/caret5_help/tutorials/Caret_Analysis_5.5.html)
+
+**A List of requirements for taking part in the project:**
+ * Graphics/Experience in working with 3D meshes i.e. cutting, flattening
+ * Blender or similar software knowledge.
+ • English: good, not necessarily proficient
+* Most importantly, an observant mind who knows when to google and learn on the go
+
+
+**Maximum number of participants:**
+5-6 (will be working in pairs)
+
+**What participants gain/learn from this  project:**
+    1.  Creativity design
+    2.  Communication skills
+    3.  Working in a team
+    4.  Neuroanatomy
+
+**Is there a plan for extending this work to a peer-reviewed paper in case the results are promising?**
+Yes
