--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -153,8 +153,8 @@ color: black
 <td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">18:00</p>
 </td>
-<td bgcolor="{{  presentation1  }}" width="118">
-<p lang="en-US"><span lang="en-US">presentations by partnering institutions</span></p>
+<td bgcolor="{{ dinner  }}" width="118">
+<p lang="en-US"><span lang="en-US"></span></p>
 </td>
 <td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
@@ -181,7 +181,7 @@ color: black
 <p lang="en-US">20:00</p>
 </td>
 <td bgcolor="{{  social  }}" width="118">
-<p lang="en-US"><span lang="en-US">a small excursion together to Warsaw downtown</span></p>
+<p lang="en-US"><span lang="en-US">social event & integration</span></p>
 </td>
 <td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">dinner</span></p>
@@ -193,7 +193,9 @@ color: black
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">21:00</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  social  }}" width="118">
+<p lang="en-US"><span lang="en-US"></span></p>
+</td>
 <td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
@@ -203,7 +205,9 @@ color: black
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">22:00</p>
 </td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{  social  }}" width="118">
+<p lang="en-US"><span lang="en-US"></span></p>
+</td>
 <td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">brain hacking</span></p>
 </td>
